<resources>
    <string name="app_name">Repeater</string>
    <string name="lexeme">lexeme</string>
    <string name="definition">definition</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="image">Image</string>
    <string name="ver_1_0_beta">ver. 1.0 beta</string>
    <string name="repeater">Repeater</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
