<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.snb.repeater.app.activity.MainActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ОБЩИЙ ТЕСТ"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ТЕСТ ПО РАЗДЕЛАМ"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ТЕОРИЯ"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="УПРАЖНЕНИЯ"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ИСТОРИЯ"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ДОБАВИТЬ"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lexeme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/definition"
        android:layout_gravity="fill"
        android:text="@string/lexeme"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/definition"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_alignBottom="@+id/submit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/submit"
        android:layout_gravity="fill"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/roundbutton"
        android:lineSpacingExtra="30sp"
        android:onClick="onCancelClick"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="fill"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/roundbutton"
        android:onClick="onSubmitClick"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

</android.support.constraint.ConstraintLayout>
